# universal-mcp-server

./: .env.example  .gitignore  CLAUDE_CODE_SETUP.md  QUICKSTART.md  README.md  mcp_config.json  mcp_project_progress.md  pyproject.toml  requirements.txt  test_simple.py
src/universal_mcp_server/: __init__.py  config.py  database_connector.py  document_reader.py  file_browser.py  main.py  project_manager.py
tests/: test_basic_functionality.py
